divisão da parte visual, usando partial do EJS

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -1,26 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="/stylesheets/bulma.min.css" />
-  <title>Lista de Tarefas</title>
-</head>
-<body>
-  <nav class="navbar is-black">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="#">
-        TODO-List
-      </a>
-      <div class="navbar-burger burger" data-target="navMenuColorblack-example">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-  </nav>
-
+  <!-- ================================== PARTIAL ==================================== -->
+  <%- include('../layouts/header') %>
+  <%- include('../layouts/menu') %>
+  <!--================================== HTML ==================================== -->
   <section class="section hero is-link is-fullheight-with-navbar">
     <div class="hero-body has-text-centered">
       <div class="container">
@@ -34,6 +15,5 @@
       </div>
     </div>
   </section>
-</body>
-</html>
-
+  <!--================================== PARTIAL ==================================== -->
+  <%- include('../layouts/footer') %>
