--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -1,5 +1,5 @@
   <!-- ================================== PARTIAL ==================================== -->
-  <%- include('../layouts/header') %>
+  <%- include('../layouts/header', {title: 'TO-DO-LIST'}) %>
   <%- include('../layouts/menu') %>
   <!--================================== HTML ==================================== -->
   <section class="section hero is-link is-fullheight-with-navbar">
@@ -11,7 +11,7 @@
         <h2 class="subtitle">
           Geranciando nossas atividades diárias =D
         </h2>
-	<a href="list-checklists.html" class="button is-light is-medium">Ir para Listas de Atividades!</a>
+	<a href="/checklists" class="button is-light is-medium">Ir para Listas de Atividades!</a>
       </div>
     </div>
   </section>
