Implementação e configuração da tela de edição da tarefa

--- a/src/views/checklists/index.ejs
+++ b/src/views/checklists/index.ejs
@@ -33,7 +33,7 @@
               </p>
               <p class="card-footer-item">
                 <span>
-                  <a href="checklist-form.html">Editar</a>
+                  <a href="/checklists/<%= checklist.id %>/edit">Editar</a>
                 </span>
               </p>
               <p class="card-footer-item">
