adição da funcionalidade de deletar as tarefas e criação da pag de erro

--- a/src/views/checklists/index.ejs
+++ b/src/views/checklists/index.ejs
@@ -38,7 +38,7 @@
               </p>
               <p class="card-footer-item">
                 <span>
-                  <a href="#" class="has-text-danger">Remover</a>
+                  <a href="/checklists/<%= checklist.id %>?_method=delete" class="has-text-danger">Remover</a>
                 </span>
               </p>
             </footer>
